# PassIt

./: AUTHORS.md  CREDITS.md  README.md  app  com.github.instantcodee.passit.json  meson.build
data/: com.github.instantcodee.passit.appdata.xml  com.github.instantcodee.passit.desktop  com.github.instantcodee.passit.gresource.xml  com.github.instantcodee.passit.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: com.github.instantcodee.passit.pot
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala  CreateController.vala
src/views/: AppView.vala  CreateContainer.vala
src/widgets/: HeaderBar.vala
tests/: assert.vala  test.vala
