sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',

    'controllers/AppController.vala',
    'controllers/CreateController.vala',

    'views/AppView.vala',
    'views/CreateContainer.vala',

    'widgets/HeaderBar.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
